[package]
name = "merkle"
version = "0.1.0"
authors = ["Chainpool <https://chainx.org>"]
edition = "2018"

[dependencies]
primitives = { path = "../primitives", default-features = false, features = ["codec"] }
serialization = { path = "../serialization", default-features = false }
chain = { path = "../chain", default-features = false }
bitvec = { version = "0.15", default-features = false, features = ["alloc"] }
#bit-vec = { git = "https://github.com/koushiro/bit-vec", branch = "work", default-features = false }
parity-codec = { version = "3.5", default-features = false }

[dev-dependencies]
crypto = { path = "../crypto", default-features = false }

[features]
default = ["std"]
std = [
     "primitives/std",
     "serialization/std",
     "chain/std",
     "bitvec/std",
#     "bit-vec/std",
     "parity-codec/std",
]
