[package]
name = "merkle"
version = "0.1.0"
authors = ["Chainpool <http://chainx.org>"]
edition = "2018"

[dependencies]
primitives = { path = "../primitives", default-features = false, features = ["codec"] }
serialization = { path = "../serialization", default-features = false }
chain = { path = "../chain", default-features = false }
bit-vec = { git = "https://github.com/koushiro/bit-vec", branch = "work", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0", default-features = false }

[dev-dependencies]
crypto = { path = "../crypto", default-features = false }

[features]
default = ["std"]
std = [
     "primitives/std",
     "serialization/std",
     "chain/std",
     "bit-vec/std",
     "codec/std",
]
