[package]
name = "merkle"
version = "0.1.0"
authors = ["ChainX <https://chainx.org>"]
edition = "2018"

[dependencies]
primitives = { path = "../primitives", default-features = false, features = ["codec"] }
serialization = { path = "../serialization", default-features = false }
chain = { path = "../chain", default-features = false }
codec = { package = "parity-codec", version = "3.5", default-features = false }

[dev-dependencies]
crypto = { path = "../crypto", default-features = false }

[features]
default = ["std"]
std = [
     "primitives/std",
     "serialization/std",
     "chain/std",
     "codec/std",
]
