[package]
name = "primitives"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com> and koushiro <koushiro.cqx@gmail.com>"]
edition = "2018"

[dependencies]
rustc-hex = { version = "2.0", default-features = false }
fixed-hash = { version = "0.3", default-features = false }
primitive-types = { version = "0.2", default-features = false, features = ["codec"] }
impl-serde = { version = "0.1", optional = true }

rstd = { path = "../rstd" }

[features]
default = ["std"]
std = [
    "rstd/std",
    "rustc-hex/std",
    "fixed-hash/std",
    "primitive-types/std",
    "primitive-types/serde",
    "primitive-types/heapsize",
    "primitive-types/byteorder",
    "primitive-types/rustc-hex",
    "primitive-types/libc",
    "impl-serde"
]
