[package]
name = "primitives"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com> and koushiro <koushiro.cqx@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = { version = "1.3", default-features = false }
rustc-hex = { version = "2.0", default-features = false }
fixed-hash = { version = "0.5", default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }
impl-serde = { version = "0.2", optional = true }
impl-codec = { git = "https://github.com/chainx-org/chainx-common", branch = "develop", default-features = false, optional = true }
primitive-types = { git = "https://github.com/chainx-org/chainx-common", branch = "develop", default-features = false }

[features]
default = ["std"]
std = [
    "byteorder/std",
    "rustc-hex/std",
    "fixed-hash/std",
    "primitive-types/std",
    "serialization",
    "codec",
]
serialization = ["std", "serde", "impl-serde", "primitive-types/serde"]
codec = ["impl-codec", "primitive-types/codec"]
