[package]
name = "serialization"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com> and koushiro <koushiro.cqx@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = { version = "1.3", default-features = false }

rstd = { path = "../rstd", default-features = false }
primitives = { path = "../primitives", default-features = false }

[features]
default = ["std"]
std = [
    "byteorder/std",
    "rstd/std",
    "primitives/std"
]
